--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -18,3 +18,9 @@ jobs:
          java-version: '17'
      - name: Build with Maven
        run: mvn clean install -DskipTests #compilar el proyecto .jar y desplegar
+     - name: Login to DockerHub #conectarse a docker hub
+       run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+     - name: Build and push Docker image #construir y subir la imagen a docker hub
+       run: docker build -t ${{ secrets.DOCKER_USERNAME }}/dormirios-rest . #nombre de la imagen. el punto es porque se pone en raiz
+     - name: Push Docker image #subir la imagen a docker hub
+       run: docker push ${{ secrets.DOCKER_USERNAME }}/dormirios-rest
